@@ -42,12 +42,13 @@ type Config struct {
 
 // FileConfig contains the configuration options for the file output.
 type FileConfig struct {
-	Path        string        `config:"path"`
-	Name        string        `config:"name"`
-	MaxSize     uint          `config:"rotateeverybytes" validate:"min=1"`
-	MaxBackups  uint          `config:"keepfiles" validate:"max=1024"`
-	Permissions uint32        `config:"permissions"`
-	Interval    time.Duration `config:"interval"`
+	Path           string        `config:"path"`
+	Name           string        `config:"name"`
+	MaxSize        uint          `config:"rotateeverybytes" validate:"min=1"`
+	MaxBackups     uint          `config:"keepfiles" validate:"max=1024"`
+	Permissions    uint32        `config:"permissions"`
+	Interval       time.Duration `config:"interval"`
+	RedirectStderr bool          `config:"redirect_stderr"`
 }
 
 var defaultConfig = Config{
